--- a/IO.html
+++ b/IO.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class IO - ruby-nuggets Application documentation (v0.8.2)</title>
+<title>class IO - ruby-nuggets Application documentation (v0.8.4)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -49,6 +49,7 @@
   <ul>
     <li>lib/nuggets/io/modes.rb
     <li>lib/nuggets/io/interact.rb
+    <li>lib/nuggets/io/redirect.rb
     <li>lib/nuggets/io/null.rb
     <li>lib/nuggets/io/agrep.rb
   </ul>
@@ -71,6 +72,10 @@
   <h3 class="section-header">Included Modules</h3>
 
   <ul class="link-list">
+  
+  
+    <li><a class="include" href="Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
+  
   
   
     <li><a class="include" href="Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
@@ -164,6 +169,8 @@
   
     <li><a href="./Nuggets/File.html">Nuggets::File</a>
   
+    <li><a href="./Nuggets/File/ExtMixin.html">Nuggets::File::ExtMixin</a>
+  
     <li><a href="./Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a>
   
     <li><a href="./Nuggets/File/SubMixin.html">Nuggets::File::SubMixin</a>
@@ -185,6 +192,8 @@
     <li><a href="./Nuggets/IO/InteractMixin.html">Nuggets::IO::InteractMixin</a>
   
     <li><a href="./Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  
+    <li><a href="./Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   
     <li><a href="./Nuggets/Integer.html">Nuggets::Integer</a>
   
