--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>Table of Contents - ruby-nuggets Application documentation (v0.8.2)</title>
+<title>Table of Contents - ruby-nuggets Application documentation (v0.8.4)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
 
 <body class="indexpage">
-<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.2)</h1>
+<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.4)</h1>
 
 <h2>Pages</h2>
 <ul>
@@ -115,6 +115,9 @@
     <a href="Nuggets/File.html">Nuggets::File</a>
   </li>
     <li class="module">
+    <a href="Nuggets/File/ExtMixin.html">Nuggets::File::ExtMixin</a>
+  </li>
+    <li class="module">
     <a href="Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a>
   </li>
     <li class="module">
@@ -146,6 +149,9 @@
   </li>
     <li class="module">
     <a href="Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  </li>
+    <li class="module">
+    <a href="Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   </li>
     <li class="class">
     <a href="Nuggets/Integer.html">Nuggets::Integer</a>
@@ -337,11 +343,11 @@
   
     <li class="method"><a href="String.html#method-c-gimme_match_data-21">::gimme_match_data! &mdash; String</a>
   
+    <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
+  
     <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
   
     <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
-  
-    <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
   
     <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
   
@@ -454,6 +460,10 @@
     <li class="method"><a href="Numeric.html#method-i-ceil_to">#ceil_to &mdash; Numeric</a>
   
     <li class="method"><a href="Nuggets/String/WcMixin.html#method-i-char_count">#char_count &mdash; Nuggets::String::WcMixin</a>
+  
+    <li class="method"><a href="Nuggets/File/ExtMixin.html#method-i-chomp_ext">#chomp_ext &mdash; Nuggets::File::ExtMixin</a>
+  
+    <li class="method"><a href="Nuggets/File/ExtMixin.html#method-i-chomp_ext-21">#chomp_ext! &mdash; Nuggets::File::ExtMixin</a>
   
     <li class="method"><a href="Util/ANSIColor2CSS.html#method-i-clear">#clear &mdash; Util::ANSIColor2CSS</a>
   
@@ -639,9 +649,9 @@
   
     <li class="method"><a href="Nuggets/Object/SingletonClassMixin.html#method-i-metaobject">#metaobject &mdash; Nuggets::Object::SingletonClassMixin</a>
   
-    <li class="method"><a href="Numeric.html#method-i-min">#min &mdash; Numeric</a>
-  
     <li class="method"><a href="Enumerable.html#method-i-min">#min &mdash; Enumerable</a>
+  
+    <li class="method"><a href="Numeric.html#method-i-min">#min &mdash; Numeric</a>
   
     <li class="method"><a href="Enumerable.html#method-i-min_by">#min_by &mdash; Enumerable</a>
   
@@ -727,6 +737,8 @@
   
     <li class="method"><a href="Array.html#method-i-rand">#rand &mdash; Array</a>
   
+    <li class="method"><a href="Nuggets/IO/RedirectMixin.html#method-i-redirect">#redirect &mdash; Nuggets::IO::RedirectMixin</a>
+  
     <li class="method"><a href="Nuggets/File/ReplaceMixin.html#method-i-replace">#replace &mdash; Nuggets::File::ReplaceMixin</a>
   
     <li class="method"><a href="String.html#method-i-replace_diacritics">#replace_diacritics &mdash; String</a>
@@ -762,6 +774,10 @@
     <li class="method"><a href="Util/Ruby.html#method-i-rvm_ruby_string">#rvm_ruby_string &mdash; Util::Ruby</a>
   
     <li class="method"><a href="Nuggets/Env/SetMixin.html#method-i-set">#set &mdash; Nuggets::Env::SetMixin</a>
+  
+    <li class="method"><a href="Nuggets/File/ExtMixin.html#method-i-set_ext">#set_ext &mdash; Nuggets::File::ExtMixin</a>
+  
+    <li class="method"><a href="Nuggets/File/ExtMixin.html#method-i-set_ext-21">#set_ext! &mdash; Nuggets::File::ExtMixin</a>
   
     <li class="method"><a href="Numeric.html#method-i-sgn">#sgn &mdash; Numeric</a>
   
@@ -813,6 +829,10 @@
   
     <li class="method"><a href="Nuggets/File/SubMixin.html#method-i-sub-21">#sub! &mdash; Nuggets::File::SubMixin</a>
   
+    <li class="method"><a href="Nuggets/File/ExtMixin.html#method-i-sub_ext">#sub_ext &mdash; Nuggets::File::ExtMixin</a>
+  
+    <li class="method"><a href="Nuggets/File/ExtMixin.html#method-i-sub_ext-21">#sub_ext! &mdash; Nuggets::File::ExtMixin</a>
+  
     <li class="method"><a href="String.html#method-i-sub_with_md">#sub_with_md &mdash; String</a>
   
     <li class="method"><a href="String.html#method-i-sub_with_md-21">#sub_with_md! &mdash; String</a>
@@ -821,11 +841,11 @@
   
     <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
   
-    <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
+    <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
   
     <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
   
-    <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
+    <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
   
     <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
   
@@ -865,9 +885,9 @@
   
     <li class="method"><a href="Nuggets/Env/UserHomeMixin.html#method-i-user_home">#user_home &mdash; Nuggets::Env::UserHomeMixin</a>
   
-    <li class="method"><a href="Nuggets/Object/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Object::BlankMixin</a>
-  
     <li class="method"><a href="Nuggets/Hash/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Hash::BlankMixin</a>
+  
+    <li class="method"><a href="Nuggets/Object/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Object::BlankMixin</a>
   
     <li class="method"><a href="Nuggets/Array/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Array::BlankMixin</a>
   
