--- a/Nuggets.html
+++ b/Nuggets.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Nuggets - ruby-nuggets Application documentation (v0.8.2)</title>
+<title>module Nuggets - ruby-nuggets Application documentation (v0.8.4)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -62,6 +62,7 @@
     <li>lib/nuggets/version.rb
     <li>lib/nuggets/file/replace_mixin.rb
     <li>lib/nuggets/file/which_mixin.rb
+    <li>lib/nuggets/file/ext_mixin.rb
     <li>lib/nuggets/file/sub_mixin.rb
     <li>lib/nuggets/integer/map_mixin.rb
     <li>lib/nuggets/integer/length_mixin.rb
@@ -79,6 +80,7 @@
     <li>lib/nuggets/array/histogram_mixin.rb
     <li>lib/nuggets/array/runiq_mixin.rb
     <li>lib/nuggets/proc/bind_mixin.rb
+    <li>lib/nuggets/io/redirect_mixin.rb
     <li>lib/nuggets/io/null_mixin.rb
     <li>lib/nuggets/io/interact_mixin.rb
     <li>lib/nuggets/uri/redirect_mixin.rb
@@ -153,6 +155,8 @@
   
     <li><a href="./Nuggets/File.html">Nuggets::File</a>
   
+    <li><a href="./Nuggets/File/ExtMixin.html">Nuggets::File::ExtMixin</a>
+  
     <li><a href="./Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a>
   
     <li><a href="./Nuggets/File/SubMixin.html">Nuggets::File::SubMixin</a>
@@ -174,6 +178,8 @@
     <li><a href="./Nuggets/IO/InteractMixin.html">Nuggets::IO::InteractMixin</a>
   
     <li><a href="./Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  
+    <li><a href="./Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   
     <li><a href="./Nuggets/Integer.html">Nuggets::Integer</a>
   
