--- a/Nuggets/File.html
+++ b/Nuggets/File.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Nuggets::File - ruby-nuggets Application documentation (v0.8.2)</title>
+<title>class Nuggets::File - ruby-nuggets Application documentation (v0.8.4)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -49,6 +49,7 @@
   <ul>
     <li>lib/nuggets/file/replace_mixin.rb
     <li>lib/nuggets/file/which_mixin.rb
+    <li>lib/nuggets/file/ext_mixin.rb
     <li>lib/nuggets/file/sub_mixin.rb
   </ul>
 </nav>
@@ -125,6 +126,8 @@
   
     <li><a href="../Nuggets/File.html">Nuggets::File</a>
   
+    <li><a href="../Nuggets/File/ExtMixin.html">Nuggets::File::ExtMixin</a>
+  
     <li><a href="../Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a>
   
     <li><a href="../Nuggets/File/SubMixin.html">Nuggets::File::SubMixin</a>
@@ -146,6 +149,8 @@
     <li><a href="../Nuggets/IO/InteractMixin.html">Nuggets::IO::InteractMixin</a>
   
     <li><a href="../Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  
+    <li><a href="../Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   
     <li><a href="../Nuggets/Integer.html">Nuggets::Integer</a>
   
