--- a/Nuggets/IO.html
+++ b/Nuggets/IO.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Nuggets::IO - ruby-nuggets Application documentation (v0.8.2)</title>
+<title>class Nuggets::IO - ruby-nuggets Application documentation (v0.8.4)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -47,6 +47,7 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
+    <li>lib/nuggets/io/redirect_mixin.rb
     <li>lib/nuggets/io/null_mixin.rb
     <li>lib/nuggets/io/interact_mixin.rb
   </ul>
@@ -124,6 +125,8 @@
   
     <li><a href="../Nuggets/File.html">Nuggets::File</a>
   
+    <li><a href="../Nuggets/File/ExtMixin.html">Nuggets::File::ExtMixin</a>
+  
     <li><a href="../Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a>
   
     <li><a href="../Nuggets/File/SubMixin.html">Nuggets::File::SubMixin</a>
@@ -145,6 +148,8 @@
     <li><a href="../Nuggets/IO/InteractMixin.html">Nuggets::IO::InteractMixin</a>
   
     <li><a href="../Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  
+    <li><a href="../Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   
     <li><a href="../Nuggets/Integer.html">Nuggets::Integer</a>
   
