--- a/README.html
+++ b/README.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>README - ruby-nuggets Application documentation (v0.8.2)</title>
+<title>README - ruby-nuggets Application documentation (v0.8.4)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -99,6 +99,8 @@
   
     <li><a href="./Nuggets/File.html">Nuggets::File</a>
   
+    <li><a href="./Nuggets/File/ExtMixin.html">Nuggets::File::ExtMixin</a>
+  
     <li><a href="./Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a>
   
     <li><a href="./Nuggets/File/SubMixin.html">Nuggets::File::SubMixin</a>
@@ -120,6 +122,8 @@
     <li><a href="./Nuggets/IO/InteractMixin.html">Nuggets::IO::InteractMixin</a>
   
     <li><a href="./Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  
+    <li><a href="./Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   
     <li><a href="./Nuggets/Integer.html">Nuggets::Integer</a>
   
@@ -241,7 +245,7 @@
 
 <h2 id="label-VERSION">VERSION</h2>
 
-<p>This documentation refers to ruby-nuggets version 0.8.2</p>
+<p>This documentation refers to ruby-nuggets version 0.8.4</p>
 
 <h2 id="label-DESCRIPTION">DESCRIPTION</h2>
 
@@ -299,7 +303,7 @@ href="mailto:jens.wille@uni-koeln.de">jens.wille@uni-koeln.de</a>&gt;</p>
 
 <h2 id="label-LICENSE+AND+COPYRIGHT">LICENSE AND COPYRIGHT</h2>
 
-<p>Copyright (C) 2007-2011 Jens Wille</p>
+<p>Copyright (C) 2007-2012 Jens Wille</p>
 
 <p>ruby-nuggets is free software: you can redistribute it and/or modify it
 under the terms of the GNU Affero General Public License as published by
