--- a/Util/Pluggable.html
+++ b/Util/Pluggable.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Util::Pluggable - ruby-nuggets Application documentation (v0.8.2)</title>
+<title>module Util::Pluggable - ruby-nuggets Application documentation (v0.8.4)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -143,6 +143,8 @@
   
     <li><a href="../Nuggets/File.html">Nuggets::File</a>
   
+    <li><a href="../Nuggets/File/ExtMixin.html">Nuggets::File::ExtMixin</a>
+  
     <li><a href="../Nuggets/File/ReplaceMixin.html">Nuggets::File::ReplaceMixin</a>
   
     <li><a href="../Nuggets/File/SubMixin.html">Nuggets::File::SubMixin</a>
@@ -164,6 +166,8 @@
     <li><a href="../Nuggets/IO/InteractMixin.html">Nuggets::IO::InteractMixin</a>
   
     <li><a href="../Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  
+    <li><a href="../Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   
     <li><a href="../Nuggets/Integer.html">Nuggets::Integer</a>
   
