--- a/File.html
+++ b/File.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class File - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class File - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -48,9 +48,9 @@
   <h3 class="section-header">Defined In</h3>
   <ul>
     <li>lib/nuggets/file/ext.rb
+    <li>lib/nuggets/file/sub.rb
     <li>lib/nuggets/file/which.rb
     <li>lib/nuggets/file/replace.rb
-    <li>lib/nuggets/file/sub.rb
   </ul>
 </nav>
 
@@ -189,6 +189,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
