--- a/Nuggets/File/ReplaceMixin.html
+++ b/Nuggets/File/ReplaceMixin.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Nuggets::File::ReplaceMixin - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>module Nuggets::File::ReplaceMixin - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="../../rdoc.css" rel="stylesheet">
 
@@ -180,6 +180,8 @@
     <li><a href="../../Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="../../Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="../../Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="../../Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
