--- a/Object.html
+++ b/Object.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Object - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class Object - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -48,12 +48,12 @@
   <h3 class="section-header">Defined In</h3>
   <ul>
     <li>lib/nuggets.rb
-    <li>lib/nuggets/object/singleton_class.rb
+    <li>lib/nuggets/object/blank.rb
     <li>lib/nuggets/object/msend.rb
     <li>lib/nuggets/object/boolean.rb
-    <li>lib/nuggets/object/blank.rb
     <li>lib/nuggets/object/silence.rb
     <li>lib/nuggets/util/content_type.rb
+    <li>lib/nuggets/object/singleton_class.rb
   </ul>
 </nav>
 
@@ -76,7 +76,7 @@
   <ul class="link-list">
   
   
-    <li><a class="include" href="Nuggets/Object/SingletonClassMixin.html">Nuggets::Object::SingletonClassMixin</a>
+    <li><a class="include" href="Nuggets/Object/BlankMixin.html">Nuggets::Object::BlankMixin</a>
   
   
   
@@ -88,11 +88,11 @@
   
   
   
-    <li><a class="include" href="Nuggets/Object/BlankMixin.html">Nuggets::Object::BlankMixin</a>
-  
-  
-  
     <li><a class="include" href="Nuggets/Object/SilenceMixin.html">Nuggets::Object::SilenceMixin</a>
+  
+  
+  
+    <li><a class="include" href="Nuggets/Object/SingletonClassMixin.html">Nuggets::Object::SingletonClassMixin</a>
   
   
   </ul>
@@ -220,6 +220,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
