--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>ruby-nuggets Application documentation (v0.8.4)</title>
+<title>ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -153,6 +153,8 @@
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
   
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
+  
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
     <li><a href="./Nuggets/String/WcMixin.html">Nuggets::String::WcMixin</a>
@@ -245,7 +247,7 @@
 
 <h2 id="label-VERSION">VERSION</h2>
 
-<p>This documentation refers to ruby-nuggets version 0.8.4</p>
+<p>This documentation refers to ruby-nuggets version 0.8.5</p>
 
 <h2 id="label-DESCRIPTION">DESCRIPTION</h2>
 
