--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>Table of Contents - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>Table of Contents - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
 
 <body class="indexpage">
-<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.4)</h1>
+<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.5)</h1>
 
 <h2>Pages</h2>
 <ul>
@@ -196,6 +196,9 @@
     <a href="Nuggets/String.html">Nuggets::String</a>
   </li>
     <li class="module">
+    <a href="Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
+  </li>
+    <li class="module">
     <a href="Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   </li>
     <li class="module">
@@ -335,21 +338,21 @@
   
     <li class="method"><a href="Util/CLI.html#method-c-execute">::execute &mdash; Util::CLI</a>
   
+    <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ContentTypeMixin</a>
+  
     <li class="method"><a href="Nuggets/URI/ExistMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ExistMixin</a>
   
     <li class="method"><a href="Nuggets/File/SubMixin.html#method-c-extended">::extended &mdash; Nuggets::File::SubMixin</a>
   
-    <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ContentTypeMixin</a>
-  
     <li class="method"><a href="String.html#method-c-gimme_match_data-21">::gimme_match_data! &mdash; String</a>
   
-    <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
+    <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
   
     <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
+    <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
+    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
   
     <li class="method"><a href="Process.html#method-c-interact_ruby">::interact_ruby &mdash; Process</a>
   
@@ -449,6 +452,14 @@
   
     <li class="method"><a href="Nuggets/String/WcMixin.html#method-i-byte_count">#byte_count &mdash; Nuggets::String::WcMixin</a>
   
+    <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-camelcase">#camelcase &mdash; Nuggets::String::CamelscoreMixin</a>
+  
+    <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-camelcase-21">#camelcase! &mdash; Nuggets::String::CamelscoreMixin</a>
+  
+    <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-camelize">#camelize &mdash; Nuggets::String::CamelscoreMixin</a>
+  
+    <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-camelize-21">#camelize! &mdash; Nuggets::String::CamelscoreMixin</a>
+  
     <li class="method"><a href="String.html#method-i-capitalize_first">#capitalize_first &mdash; String</a>
   
     <li class="method"><a href="String.html#method-i-capitalize_first-21">#capitalize_first! &mdash; String</a>
@@ -470,6 +481,8 @@
     <li class="method"><a href="Array.html#method-i-comb">#comb &mdash; Array</a>
   
     <li class="method"><a href="Util/Ruby.html#method-i-command_for_ruby_tool">#command_for_ruby_tool &mdash; Util::Ruby</a>
+  
+    <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-constantize">#constantize &mdash; Nuggets::String::CamelscoreMixin</a>
   
     <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-i-content_type">#content_type &mdash; Nuggets::URI::ContentTypeMixin</a>
   
@@ -577,9 +590,9 @@
   
     <li class="method"><a href="Numeric.html#method-i-hms">#hms &mdash; Numeric</a>
   
-    <li class="method"><a href="Array.html#method-i-in_order">#in_order &mdash; Array</a>
-  
     <li class="method"><a href="Hash.html#method-i-in_order">#in_order &mdash; Hash</a>
+  
+    <li class="method"><a href="Array.html#method-i-in_order">#in_order &mdash; Array</a>
   
     <li class="method"><a href="Array.html#method-i-in_order-21">#in_order! &mdash; Array</a>
   
@@ -597,9 +610,9 @@
   
     <li class="method"><a href="Nuggets/Integer/LengthMixin.html#method-i-length">#length &mdash; Nuggets::Integer::LengthMixin</a>
   
-    <li class="method"><a href="Numeric.html#method-i-limit">#limit &mdash; Numeric</a>
-  
     <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-limit">#limit &mdash; Nuggets::Array::LimitMixin</a>
+  
+    <li class="method"><a href="Numeric.html#method-i-limit">#limit &mdash; Numeric</a>
   
     <li class="method"><a href="Nuggets/String/WcMixin.html#method-i-line_count">#line_count &mdash; Nuggets::String::WcMixin</a>
   
@@ -631,9 +644,9 @@
   
     <li class="method"><a href="Nuggets/Integer/MapMixin.html#method-i-map_positive">#map_positive &mdash; Nuggets::Integer::MapMixin</a>
   
-    <li class="method"><a href="Enumerable.html#method-i-max">#max &mdash; Enumerable</a>
-  
     <li class="method"><a href="Numeric.html#method-i-max">#max &mdash; Numeric</a>
+  
+    <li class="method"><a href="Enumerable.html#method-i-max">#max &mdash; Enumerable</a>
   
     <li class="method"><a href="Enumerable.html#method-i-max_by">#max_by &mdash; Enumerable</a>
   
@@ -649,9 +662,9 @@
   
     <li class="method"><a href="Nuggets/Object/SingletonClassMixin.html#method-i-metaobject">#metaobject &mdash; Nuggets::Object::SingletonClassMixin</a>
   
-    <li class="method"><a href="Enumerable.html#method-i-min">#min &mdash; Enumerable</a>
-  
     <li class="method"><a href="Numeric.html#method-i-min">#min &mdash; Numeric</a>
+  
+    <li class="method"><a href="Enumerable.html#method-i-min">#min &mdash; Enumerable</a>
   
     <li class="method"><a href="Enumerable.html#method-i-min_by">#min_by &mdash; Enumerable</a>
   
@@ -837,17 +850,17 @@
   
     <li class="method"><a href="String.html#method-i-sub_with_md-21">#sub_with_md! &mdash; String</a>
   
-    <li class="method"><a href="Net/HTTPSuccess.html#method-i-success-3F">#success? &mdash; Net::HTTPSuccess</a>
-  
-    <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
-  
     <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
   
-    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
+    <li class="method"><a href="Net/HTTPSuccess.html#method-i-success-3F">#success? &mdash; Net::HTTPSuccess</a>
   
     <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
   
     <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
+  
+    <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
+  
+    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
   
     <li class="method"><a href="Integer.html#method-i-to_binary_s">#to_binary_s &mdash; Integer</a>
   
@@ -866,6 +879,10 @@
     <li class="method"><a href="Numeric.html#method-i-to_ymd">#to_ymd &mdash; Numeric</a>
   
     <li class="method"><a href="Nuggets/Object/BooleanMixin.html#method-i-true-3F">#true? &mdash; Nuggets::Object::BooleanMixin</a>
+  
+    <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-underscore">#underscore &mdash; Nuggets::String::CamelscoreMixin</a>
+  
+    <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-underscore-21">#underscore! &mdash; Nuggets::String::CamelscoreMixin</a>
   
     <li class="method"><a href="Nuggets/Object/SingletonClassMixin.html#method-i-uniclass">#uniclass &mdash; Nuggets::Object::SingletonClassMixin</a>
   
