--- a/Array.html
+++ b/Array.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Array - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class Array - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -47,27 +47,27 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/object/blank.rb
-    <li>lib/nuggets/array/correlation.rb
-    <li>lib/nuggets/array/shuffle.rb
+    <li>lib/nuggets/array/mean.rb
+    <li>lib/nuggets/array/mode.rb
+    <li>lib/nuggets/array/only.rb
+    <li>lib/nuggets/array/rand.rb
     <li>lib/nuggets/array/limit.rb
     <li>lib/nuggets/array/runiq.rb
+    <li>lib/nuggets/array/format.rb
+    <li>lib/nuggets/array/median.rb
+    <li>lib/nuggets/object/blank.rb
+    <li>lib/nuggets/array/shuffle.rb
+    <li>lib/nuggets/array/to_hash.rb
+    <li>lib/nuggets/array/in_order.rb
+    <li>lib/nuggets/array/monotone.rb
     <li>lib/nuggets/array/variance.rb
     <li>lib/nuggets/array/histogram.rb
-    <li>lib/nuggets/array/median.rb
-    <li>lib/nuggets/array/to_hash.rb
-    <li>lib/nuggets/array/combination.rb
-    <li>lib/nuggets/array/monotone.rb
-    <li>lib/nuggets/array/mode.rb
-    <li>lib/nuggets/array/rand.rb
-    <li>lib/nuggets/array/standard_deviation.rb
-    <li>lib/nuggets/array/only.rb
     <li>lib/nuggets/array/regression.rb
+    <li>lib/nuggets/array/combination.rb
+    <li>lib/nuggets/array/correlation.rb
     <li>lib/nuggets/array/flatten_once.rb
-    <li>lib/nuggets/array/in_order.rb
-    <li>lib/nuggets/array/mean.rb
-    <li>lib/nuggets/array/format.rb
     <li>lib/nuggets/util/dotted_decimal.rb
+    <li>lib/nuggets/array/standard_deviation.rb
   </ul>
 </nav>
 
@@ -90,11 +90,11 @@
   <ul class="link-list">
   
   
-    <li><a class="include" href="Nuggets/Array/BlankMixin.html">Nuggets::Array::BlankMixin</a>
+    <li><a class="include" href="Nuggets/Array/MeanMixin.html">Nuggets::Array::MeanMixin</a>
   
   
   
-    <li><a class="include" href="Nuggets/Array/CorrelationMixin.html">Nuggets::Array::CorrelationMixin</a>
+    <li><a class="include" href="Nuggets/Array/ModeMixin.html">Nuggets::Array::ModeMixin</a>
   
   
   
@@ -106,6 +106,14 @@
   
   
   
+    <li><a class="include" href="Nuggets/Array/MedianMixin.html">Nuggets::Array::MedianMixin</a>
+  
+  
+  
+    <li><a class="include" href="Nuggets/Array/BlankMixin.html">Nuggets::Array::BlankMixin</a>
+  
+  
+  
     <li><a class="include" href="Nuggets/Array/VarianceMixin.html">Nuggets::Array::VarianceMixin</a>
   
   
@@ -114,23 +122,15 @@
   
   
   
-    <li><a class="include" href="Nuggets/Array/MedianMixin.html">Nuggets::Array::MedianMixin</a>
-  
-  
-  
-    <li><a class="include" href="Nuggets/Array/ModeMixin.html">Nuggets::Array::ModeMixin</a>
-  
-  
-  
-    <li><a class="include" href="Nuggets/Array/StandardDeviationMixin.html">Nuggets::Array::StandardDeviationMixin</a>
-  
-  
-  
     <li><a class="include" href="Nuggets/Array/RegressionMixin.html">Nuggets::Array::RegressionMixin</a>
   
   
   
-    <li><a class="include" href="Nuggets/Array/MeanMixin.html">Nuggets::Array::MeanMixin</a>
+    <li><a class="include" href="Nuggets/Array/CorrelationMixin.html">Nuggets::Array::CorrelationMixin</a>
+  
+  
+  
+    <li><a class="include" href="Nuggets/Array/StandardDeviationMixin.html">Nuggets::Array::StandardDeviationMixin</a>
   
   
   </ul>
@@ -310,6 +310,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
