--- a/Hash.html
+++ b/Hash.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Hash - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class Hash - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -47,14 +47,14 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/hash/insert.rb
+    <li>lib/nuggets/hash/at.rb
     <li>lib/nuggets/hash/nest.rb
     <li>lib/nuggets/hash/only.rb
-    <li>lib/nuggets/hash/deep_merge.rb
-    <li>lib/nuggets/hash/at.rb
-    <li>lib/nuggets/hash/in_order.rb
+    <li>lib/nuggets/hash/insert.rb
     <li>lib/nuggets/hash/unroll.rb
     <li>lib/nuggets/object/blank.rb
+    <li>lib/nuggets/hash/in_order.rb
+    <li>lib/nuggets/hash/deep_merge.rb
   </ul>
 </nav>
 
@@ -77,15 +77,15 @@
   <ul class="link-list">
   
   
-    <li><a class="include" href="Nuggets/Hash/DeepMergeMixin.html">Nuggets::Hash::DeepMergeMixin</a>
-  
-  
-  
     <li><a class="include" href="Nuggets/Hash/UnrollMixin.html">Nuggets::Hash::UnrollMixin</a>
   
   
   
     <li><a class="include" href="Nuggets/Hash/BlankMixin.html">Nuggets::Hash::BlankMixin</a>
+  
+  
+  
+    <li><a class="include" href="Nuggets/Hash/DeepMergeMixin.html">Nuggets::Hash::DeepMergeMixin</a>
   
   
   </ul>
@@ -229,6 +229,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
