--- a/IO.html
+++ b/IO.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class IO - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class IO - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -47,11 +47,11 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
+    <li>lib/nuggets/io/null.rb
+    <li>lib/nuggets/io/agrep.rb
     <li>lib/nuggets/io/modes.rb
     <li>lib/nuggets/io/interact.rb
     <li>lib/nuggets/io/redirect.rb
-    <li>lib/nuggets/io/null.rb
-    <li>lib/nuggets/io/agrep.rb
   </ul>
 </nav>
 
@@ -74,11 +74,11 @@
   <ul class="link-list">
   
   
-    <li><a class="include" href="Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
-  
-  
-  
     <li><a class="include" href="Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a>
+  
+  
+  
+    <li><a class="include" href="Nuggets/IO/RedirectMixin.html">Nuggets::IO::RedirectMixin</a>
   
   
   </ul>
@@ -222,6 +222,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
