--- a/Integer.html
+++ b/Integer.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Integer - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class Integer - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -47,10 +47,10 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/integer/to_binary_s.rb
-    <li>lib/nuggets/integer/length.rb
     <li>lib/nuggets/integer/map.rb
+    <li>lib/nuggets/integer/length.rb
     <li>lib/nuggets/integer/factorial.rb
+    <li>lib/nuggets/integer/to_binary_s.rb
     <li>lib/nuggets/util/dotted_decimal.rb
   </ul>
 </nav>
@@ -74,11 +74,11 @@
   <ul class="link-list">
   
   
-    <li><a class="include" href="Nuggets/Integer/LengthMixin.html">Nuggets::Integer::LengthMixin</a>
-  
-  
-  
     <li><a class="include" href="Nuggets/Integer/MapMixin.html">Nuggets::Integer::MapMixin</a>
+  
+  
+  
+    <li><a class="include" href="Nuggets/Integer/LengthMixin.html">Nuggets::Integer::LengthMixin</a>
   
   
   </ul>
@@ -216,6 +216,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
