--- a/Nuggets.html
+++ b/Nuggets.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Nuggets - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>module Nuggets - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -47,45 +47,46 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/range/quantile_mixin.rb
-    <li>lib/nuggets/hash/unroll_mixin.rb
-    <li>lib/nuggets/hash/deep_merge_mixin.rb
-    <li>lib/nuggets/hash/nest_mixin.rb
-    <li>lib/nuggets/env/user_home_mixin.rb
-    <li>lib/nuggets/env/set_mixin.rb
-    <li>lib/nuggets/env/user_encoding_mixin.rb
-    <li>lib/nuggets/object/silence_mixin.rb
-    <li>lib/nuggets/object/boolean_mixin.rb
-    <li>lib/nuggets/object/msend_mixin.rb
-    <li>lib/nuggets/object/singleton_class_mixin.rb
-    <li>lib/nuggets/object/blank_mixin.rb
     <li>lib/nuggets/version.rb
-    <li>lib/nuggets/file/replace_mixin.rb
-    <li>lib/nuggets/file/which_mixin.rb
+    <li>lib/nuggets/env/set_mixin.rb
+    <li>lib/nuggets/io/null_mixin.rb
     <li>lib/nuggets/file/ext_mixin.rb
     <li>lib/nuggets/file/sub_mixin.rb
-    <li>lib/nuggets/integer/map_mixin.rb
-    <li>lib/nuggets/integer/length_mixin.rb
+    <li>lib/nuggets/hash/nest_mixin.rb
+    <li>lib/nuggets/proc/bind_mixin.rb
     <li>lib/nuggets/string/wc_mixin.rb
-    <li>lib/nuggets/string/xor_mixin.rb
-    <li>lib/nuggets/string/evaluate_mixin.rb
-    <li>lib/nuggets/array/regression_mixin.rb
-    <li>lib/nuggets/array/standard_deviation_mixin.rb
-    <li>lib/nuggets/array/variance_mixin.rb
-    <li>lib/nuggets/array/correlation_mixin.rb
+    <li>lib/nuggets/uri/exist_mixin.rb
     <li>lib/nuggets/array/mean_mixin.rb
     <li>lib/nuggets/array/mode_mixin.rb
+    <li>lib/nuggets/file/which_mixin.rb
+    <li>lib/nuggets/string/xor_mixin.rb
     <li>lib/nuggets/array/limit_mixin.rb
-    <li>lib/nuggets/array/median_mixin.rb
-    <li>lib/nuggets/array/histogram_mixin.rb
     <li>lib/nuggets/array/runiq_mixin.rb
-    <li>lib/nuggets/proc/bind_mixin.rb
-    <li>lib/nuggets/io/redirect_mixin.rb
-    <li>lib/nuggets/io/null_mixin.rb
+    <li>lib/nuggets/hash/unroll_mixin.rb
+    <li>lib/nuggets/integer/map_mixin.rb
     <li>lib/nuggets/io/interact_mixin.rb
+    <li>lib/nuggets/io/redirect_mixin.rb
+    <li>lib/nuggets/array/median_mixin.rb
+    <li>lib/nuggets/file/replace_mixin.rb
+    <li>lib/nuggets/object/blank_mixin.rb
+    <li>lib/nuggets/object/msend_mixin.rb
     <li>lib/nuggets/uri/redirect_mixin.rb
-    <li>lib/nuggets/uri/exist_mixin.rb
+    <li>lib/nuggets/env/user_home_mixin.rb
+    <li>lib/nuggets/array/variance_mixin.rb
+    <li>lib/nuggets/integer/length_mixin.rb
+    <li>lib/nuggets/object/boolean_mixin.rb
+    <li>lib/nuggets/object/silence_mixin.rb
+    <li>lib/nuggets/range/quantile_mixin.rb
+    <li>lib/nuggets/array/histogram_mixin.rb
+    <li>lib/nuggets/hash/deep_merge_mixin.rb
+    <li>lib/nuggets/string/evaluate_mixin.rb
+    <li>lib/nuggets/array/regression_mixin.rb
     <li>lib/nuggets/uri/content_type_mixin.rb
+    <li>lib/nuggets/array/correlation_mixin.rb
+    <li>lib/nuggets/env/user_encoding_mixin.rb
+    <li>lib/nuggets/string/camelscore_mixin.rb
+    <li>lib/nuggets/object/singleton_class_mixin.rb
+    <li>lib/nuggets/array/standard_deviation_mixin.rb
   </ul>
 </nav>
 
@@ -208,6 +209,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
