--- a/Nuggets/Array.html
+++ b/Nuggets/Array.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Nuggets::Array - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class Nuggets::Array - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -47,17 +47,17 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/object/blank_mixin.rb
-    <li>lib/nuggets/array/regression_mixin.rb
-    <li>lib/nuggets/array/standard_deviation_mixin.rb
-    <li>lib/nuggets/array/variance_mixin.rb
-    <li>lib/nuggets/array/correlation_mixin.rb
     <li>lib/nuggets/array/mean_mixin.rb
     <li>lib/nuggets/array/mode_mixin.rb
     <li>lib/nuggets/array/limit_mixin.rb
-    <li>lib/nuggets/array/median_mixin.rb
-    <li>lib/nuggets/array/histogram_mixin.rb
     <li>lib/nuggets/array/runiq_mixin.rb
+    <li>lib/nuggets/array/median_mixin.rb
+    <li>lib/nuggets/object/blank_mixin.rb
+    <li>lib/nuggets/array/variance_mixin.rb
+    <li>lib/nuggets/array/histogram_mixin.rb
+    <li>lib/nuggets/array/regression_mixin.rb
+    <li>lib/nuggets/array/correlation_mixin.rb
+    <li>lib/nuggets/array/standard_deviation_mixin.rb
   </ul>
 </nav>
 
@@ -186,6 +186,8 @@
     <li><a href="../Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="../Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="../Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="../Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
