--- a/Nuggets/Object.html
+++ b/Nuggets/Object.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Nuggets::Object - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class Nuggets::Object - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -47,11 +47,11 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/object/silence_mixin.rb
-    <li>lib/nuggets/object/boolean_mixin.rb
-    <li>lib/nuggets/object/msend_mixin.rb
-    <li>lib/nuggets/object/singleton_class_mixin.rb
     <li>lib/nuggets/object/blank_mixin.rb
+    <li>lib/nuggets/object/msend_mixin.rb
+    <li>lib/nuggets/object/boolean_mixin.rb
+    <li>lib/nuggets/object/silence_mixin.rb
+    <li>lib/nuggets/object/singleton_class_mixin.rb
   </ul>
 </nav>
 
@@ -180,6 +180,8 @@
     <li><a href="../Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="../Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="../Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="../Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
