--- a/Nuggets/String.html
+++ b/Nuggets/String.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class Nuggets::String - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class Nuggets::String - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -50,6 +50,7 @@
     <li>lib/nuggets/string/wc_mixin.rb
     <li>lib/nuggets/string/xor_mixin.rb
     <li>lib/nuggets/string/evaluate_mixin.rb
+    <li>lib/nuggets/string/camelscore_mixin.rb
   </ul>
 </nav>
 
@@ -178,6 +179,8 @@
     <li><a href="../Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="../Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="../Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="../Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
