--- a/Nuggets/URI.html
+++ b/Nuggets/URI.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Nuggets::URI - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>module Nuggets::URI - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="../rdoc.css" rel="stylesheet">
 
@@ -47,8 +47,8 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/uri/redirect_mixin.rb
     <li>lib/nuggets/uri/exist_mixin.rb
+    <li>lib/nuggets/uri/redirect_mixin.rb
     <li>lib/nuggets/uri/content_type_mixin.rb
   </ul>
 </nav>
@@ -172,6 +172,8 @@
     <li><a href="../Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="../Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="../Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="../Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
