--- a/String.html
+++ b/String.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>class String - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>class String - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -47,18 +47,19 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/string/word_wrap.rb
-    <li>lib/nuggets/string/capitalize_first.rb
     <li>lib/nuggets/string/wc.rb
-    <li>lib/nuggets/string/evaluate.rb
-    <li>lib/nuggets/string/msub.rb
-    <li>lib/nuggets/string/nsub.rb
+    <li>lib/nuggets/util/i18n.rb
     <li>lib/nuggets/string/xor.rb
     <li>lib/nuggets/string/case.rb
+    <li>lib/nuggets/string/msub.rb
+    <li>lib/nuggets/string/nsub.rb
+    <li>lib/nuggets/string/evaluate.rb
+    <li>lib/nuggets/string/word_wrap.rb
+    <li>lib/nuggets/string/camelscore.rb
     <li>lib/nuggets/string/sub_with_md.rb
     <li>lib/nuggets/util/ansicolor2css.rb
     <li>lib/nuggets/util/dotted_decimal.rb
-    <li>lib/nuggets/util/i18n.rb
+    <li>lib/nuggets/string/capitalize_first.rb
   </ul>
 </nav>
 
@@ -85,11 +86,15 @@
   
   
   
+    <li><a class="include" href="Nuggets/String/XorMixin.html">Nuggets::String::XorMixin</a>
+  
+  
+  
     <li><a class="include" href="Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
   
   
-    <li><a class="include" href="Nuggets/String/XorMixin.html">Nuggets::String::XorMixin</a>
+    <li><a class="include" href="Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
   
   </ul>
@@ -269,6 +274,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
