--- a/Util.html
+++ b/Util.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>module Util - ruby-nuggets Application documentation (v0.8.4)</title>
+<title>module Util - ruby-nuggets Application documentation (v0.8.5)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -47,13 +47,13 @@
     <nav id="file-list-section" class="section">
   <h3 class="section-header">Defined In</h3>
   <ul>
-    <li>lib/nuggets/util/ansicolor2css.rb
-    <li>lib/nuggets/util/content_type.rb
-    <li>lib/nuggets/util/ruby.rb
-    <li>lib/nuggets/util/added_methods.rb
     <li>lib/nuggets/util/cli.rb
     <li>lib/nuggets/util/i18n.rb
+    <li>lib/nuggets/util/ruby.rb
     <li>lib/nuggets/util/pluggable.rb
+    <li>lib/nuggets/util/content_type.rb
+    <li>lib/nuggets/util/added_methods.rb
+    <li>lib/nuggets/util/ansicolor2css.rb
   </ul>
 </nav>
 
@@ -176,6 +176,8 @@
     <li><a href="./Nuggets/Range/QuantileMixin.html">Nuggets::Range::QuantileMixin</a>
   
     <li><a href="./Nuggets/String.html">Nuggets::String</a>
+  
+    <li><a href="./Nuggets/String/CamelscoreMixin.html">Nuggets::String::CamelscoreMixin</a>
   
     <li><a href="./Nuggets/String/EvaluateMixin.html">Nuggets::String::EvaluateMixin</a>
   
