--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>Table of Contents - ruby-nuggets Application documentation (v0.8.5)</title>
+<title>Table of Contents - ruby-nuggets Application documentation (v0.8.6)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
 
 <body class="indexpage">
-<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.5)</h1>
+<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.6)</h1>
 
 <h2>Pages</h2>
 <ul>
@@ -340,19 +340,19 @@
   
     <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ContentTypeMixin</a>
   
-    <li class="method"><a href="Nuggets/URI/ExistMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ExistMixin</a>
-  
     <li class="method"><a href="Nuggets/File/SubMixin.html#method-c-extended">::extended &mdash; Nuggets::File::SubMixin</a>
+  
+    <li class="method"><a href="Nuggets/URI/ExistMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ExistMixin</a>
   
     <li class="method"><a href="String.html#method-c-gimme_match_data-21">::gimme_match_data! &mdash; String</a>
   
-    <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
-  
-    <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
+    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
   
     <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
+    <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
+  
+    <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
   
     <li class="method"><a href="Process.html#method-c-interact_ruby">::interact_ruby &mdash; Process</a>
   
@@ -459,6 +459,8 @@
     <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-camelize">#camelize &mdash; Nuggets::String::CamelscoreMixin</a>
   
     <li class="method"><a href="Nuggets/String/CamelscoreMixin.html#method-i-camelize-21">#camelize! &mdash; Nuggets::String::CamelscoreMixin</a>
+  
+    <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-cap">#cap &mdash; Nuggets::Array::LimitMixin</a>
   
     <li class="method"><a href="String.html#method-i-capitalize_first">#capitalize_first &mdash; String</a>
   
@@ -662,9 +664,9 @@
   
     <li class="method"><a href="Nuggets/Object/SingletonClassMixin.html#method-i-metaobject">#metaobject &mdash; Nuggets::Object::SingletonClassMixin</a>
   
-    <li class="method"><a href="Numeric.html#method-i-min">#min &mdash; Numeric</a>
-  
     <li class="method"><a href="Enumerable.html#method-i-min">#min &mdash; Enumerable</a>
+  
+    <li class="method"><a href="Numeric.html#method-i-min">#min &mdash; Numeric</a>
   
     <li class="method"><a href="Enumerable.html#method-i-min_by">#min_by &mdash; Enumerable</a>
   
@@ -746,9 +748,9 @@
   
     <li class="method"><a href="Util/CLI.html#method-i-quit">#quit &mdash; Util::CLI</a>
   
-    <li class="method"><a href="Hash.html#method-i-rand">#rand &mdash; Hash</a>
-  
     <li class="method"><a href="Array.html#method-i-rand">#rand &mdash; Array</a>
+  
+    <li class="method"><a href="Hash.html#method-i-rand">#rand &mdash; Hash</a>
   
     <li class="method"><a href="Nuggets/IO/RedirectMixin.html#method-i-redirect">#redirect &mdash; Nuggets::IO::RedirectMixin</a>
   
@@ -850,17 +852,17 @@
   
     <li class="method"><a href="String.html#method-i-sub_with_md-21">#sub_with_md! &mdash; String</a>
   
-    <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
-  
-    <li class="method"><a href="Net/HTTPSuccess.html#method-i-success-3F">#success? &mdash; Net::HTTPSuccess</a>
-  
     <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
   
     <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
   
-    <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
+    <li class="method"><a href="Net/HTTPSuccess.html#method-i-success-3F">#success? &mdash; Net::HTTPSuccess</a>
+  
+    <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
   
     <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
+  
+    <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
   
     <li class="method"><a href="Integer.html#method-i-to_binary_s">#to_binary_s &mdash; Integer</a>
   
@@ -902,11 +904,11 @@
   
     <li class="method"><a href="Nuggets/Env/UserHomeMixin.html#method-i-user_home">#user_home &mdash; Nuggets::Env::UserHomeMixin</a>
   
-    <li class="method"><a href="Nuggets/Hash/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Hash::BlankMixin</a>
+    <li class="method"><a href="Nuggets/Array/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Array::BlankMixin</a>
   
     <li class="method"><a href="Nuggets/Object/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Object::BlankMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Array::BlankMixin</a>
+    <li class="method"><a href="Nuggets/Hash/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Hash::BlankMixin</a>
   
     <li class="method"><a href="Nuggets/Array/VarianceMixin.html#method-i-var">#var &mdash; Nuggets::Array::VarianceMixin</a>
   
