--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
-<title>Table of Contents - ruby-nuggets Application documentation (v0.8.6)</title>
+<title>Table of Contents - ruby-nuggets Application documentation (v0.8.7)</title>
 
 <link type="text/css" media="screen" href="./rdoc.css" rel="stylesheet">
 
@@ -21,7 +21,7 @@
 
 
 <body class="indexpage">
-<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.6)</h1>
+<h1>Table of Contents - ruby-nuggets Application documentation (v0.8.7)</h1>
 
 <h2>Pages</h2>
 <ul>
@@ -334,25 +334,27 @@
   
     <li class="method"><a href="IO.html#method-c-append_read">::append_read &mdash; IO</a>
   
+    <li class="method"><a href="Util/I18n.html#method-c-args_for_map_diacritics">::args_for_map_diacritics &mdash; Util::I18n</a>
+  
     <li class="method"><a href="Util/CLI.html#method-c-defaults">::defaults &mdash; Util::CLI</a>
   
     <li class="method"><a href="Util/CLI.html#method-c-execute">::execute &mdash; Util::CLI</a>
   
-    <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ContentTypeMixin</a>
-  
     <li class="method"><a href="Nuggets/File/SubMixin.html#method-c-extended">::extended &mdash; Nuggets::File::SubMixin</a>
+  
+    <li class="method"><a href="Nuggets/URI/ContentTypeMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ContentTypeMixin</a>
   
     <li class="method"><a href="Nuggets/URI/ExistMixin.html#method-c-extended">::extended &mdash; Nuggets::URI::ExistMixin</a>
   
     <li class="method"><a href="String.html#method-c-gimme_match_data-21">::gimme_match_data! &mdash; String</a>
   
-    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
+    <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
   
     <li class="method"><a href="Nuggets/Array/RegressionMixin.html#method-c-included">::included &mdash; Nuggets::Array::RegressionMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/CorrelationMixin.html#method-c-included">::included &mdash; Nuggets::Array::CorrelationMixin</a>
-  
     <li class="method"><a href="Nuggets/Array/StandardDeviationMixin.html#method-c-included">::included &mdash; Nuggets::Array::StandardDeviationMixin</a>
+  
+    <li class="method"><a href="Nuggets/Array/ModeMixin.html#method-c-included">::included &mdash; Nuggets::Array::ModeMixin</a>
   
     <li class="method"><a href="Process.html#method-c-interact_ruby">::interact_ruby &mdash; Process</a>
   
@@ -440,9 +442,9 @@
   
     <li class="method"><a href="Nuggets/Array/MeanMixin.html#method-i-avg">#avg &mdash; Nuggets::Array::MeanMixin</a>
   
-    <li class="method"><a href="Numeric.html#method-i-between">#between &mdash; Numeric</a>
-  
     <li class="method"><a href="Nuggets/Array/LimitMixin.html#method-i-between">#between &mdash; Nuggets::Array::LimitMixin</a>
+  
+    <li class="method"><a href="Numeric.html#method-i-between">#between &mdash; Numeric</a>
   
     <li class="method"><a href="Nuggets/Proc/BindMixin.html#method-i-bind">#bind &mdash; Nuggets::Proc::BindMixin</a>
   
@@ -592,9 +594,9 @@
   
     <li class="method"><a href="Numeric.html#method-i-hms">#hms &mdash; Numeric</a>
   
-    <li class="method"><a href="Hash.html#method-i-in_order">#in_order &mdash; Hash</a>
-  
     <li class="method"><a href="Array.html#method-i-in_order">#in_order &mdash; Array</a>
+  
+    <li class="method"><a href="Hash.html#method-i-in_order">#in_order &mdash; Hash</a>
   
     <li class="method"><a href="Array.html#method-i-in_order-21">#in_order! &mdash; Array</a>
   
@@ -644,11 +646,15 @@
   
     <li class="method"><a href="String.html#method-i-lower_case-3F">#lower_case? &mdash; String</a>
   
+    <li class="method"><a href="String.html#method-i-map_diacritics">#map_diacritics &mdash; String</a>
+  
+    <li class="method"><a href="String.html#method-i-map_diacritics-21">#map_diacritics! &mdash; String</a>
+  
     <li class="method"><a href="Nuggets/Integer/MapMixin.html#method-i-map_positive">#map_positive &mdash; Nuggets::Integer::MapMixin</a>
   
-    <li class="method"><a href="Numeric.html#method-i-max">#max &mdash; Numeric</a>
-  
     <li class="method"><a href="Enumerable.html#method-i-max">#max &mdash; Enumerable</a>
+  
+    <li class="method"><a href="Numeric.html#method-i-max">#max &mdash; Numeric</a>
   
     <li class="method"><a href="Enumerable.html#method-i-max_by">#max_by &mdash; Enumerable</a>
   
@@ -710,9 +716,9 @@
   
     <li class="method"><a href="Util/ContentType.html#method-i-of">#of &mdash; Util::ContentType</a>
   
-    <li class="method"><a href="Array.html#method-i-only">#only &mdash; Array</a>
-  
     <li class="method"><a href="Hash.html#method-i-only">#only &mdash; Hash</a>
+  
+    <li class="method"><a href="Array.html#method-i-only">#only &mdash; Array</a>
   
     <li class="method"><a href="Hash.html#method-i-only_pair">#only_pair &mdash; Hash</a>
   
@@ -742,6 +748,8 @@
   
     <li class="method"><a href="Util/CLI.html#method-i-progname">#progname &mdash; Util::CLI</a>
   
+    <li class="method"><a href="Util/CLI.html#method-i-puts">#puts &mdash; Util::CLI</a>
+  
     <li class="method"><a href="Nuggets/Array/MeanMixin.html#method-i-quadratic_mean">#quadratic_mean &mdash; Nuggets::Array::MeanMixin</a>
   
     <li class="method"><a href="Nuggets/Range/QuantileMixin.html#method-i-quantile">#quantile &mdash; Nuggets::Range::QuantileMixin</a>
@@ -759,6 +767,8 @@
     <li class="method"><a href="String.html#method-i-replace_diacritics">#replace_diacritics &mdash; String</a>
   
     <li class="method"><a href="String.html#method-i-replace_diacritics-21">#replace_diacritics! &mdash; String</a>
+  
+    <li class="method"><a href="Nuggets/Array/MeanMixin.html#method-i-report_mean">#report_mean &mdash; Nuggets::Array::MeanMixin</a>
   
     <li class="method"><a href="Util/CLI.html#method-i-reset">#reset &mdash; Util::CLI</a>
   
@@ -810,6 +820,8 @@
   
     <li class="method"><a href="Array.html#method-i-shuffle_knuth-21">#shuffle_knuth! &mdash; Array</a>
   
+    <li class="method"><a href="Util/CLI.html#method-i-shut">#shut &mdash; Util::CLI</a>
+  
     <li class="method"><a href="Numeric.html#method-i-sign">#sign &mdash; Numeric</a>
   
     <li class="method"><a href="Numeric.html#method-i-signum">#signum &mdash; Numeric</a>
@@ -852,17 +864,17 @@
   
     <li class="method"><a href="String.html#method-i-sub_with_md-21">#sub_with_md! &mdash; String</a>
   
-    <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
+    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
   
-    <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
+    <li class="method"><a href="Net/HTTPClientError.html#method-i-success-3F">#success? &mdash; Net::HTTPClientError</a>
   
     <li class="method"><a href="Net/HTTPSuccess.html#method-i-success-3F">#success? &mdash; Net::HTTPSuccess</a>
   
-    <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
-  
-    <li class="method"><a href="Net/HTTPRedirection.html#method-i-success-3F">#success? &mdash; Net::HTTPRedirection</a>
-  
     <li class="method"><a href="Net/HTTPResponse.html#method-i-success-3F">#success? &mdash; Net::HTTPResponse</a>
+  
+    <li class="method"><a href="Net/HTTPMultipleChoice.html#method-i-success-3F">#success? &mdash; Net::HTTPMultipleChoice</a>
+  
+    <li class="method"><a href="Net/HTTPServerError.html#method-i-success-3F">#success? &mdash; Net::HTTPServerError</a>
   
     <li class="method"><a href="Integer.html#method-i-to_binary_s">#to_binary_s &mdash; Integer</a>
   
@@ -904,11 +916,11 @@
   
     <li class="method"><a href="Nuggets/Env/UserHomeMixin.html#method-i-user_home">#user_home &mdash; Nuggets::Env::UserHomeMixin</a>
   
-    <li class="method"><a href="Nuggets/Array/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Array::BlankMixin</a>
-  
     <li class="method"><a href="Nuggets/Object/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Object::BlankMixin</a>
   
     <li class="method"><a href="Nuggets/Hash/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Hash::BlankMixin</a>
+  
+    <li class="method"><a href="Nuggets/Array/BlankMixin.html#method-i-vain-3F">#vain? &mdash; Nuggets::Array::BlankMixin</a>
   
     <li class="method"><a href="Nuggets/Array/VarianceMixin.html#method-i-var">#var &mdash; Nuggets::Array::VarianceMixin</a>
   
